WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
278088
[WPE] Fix build with API 1.1
https://bugs.webkit.org/show_bug.cgi?id=278088
Summary
[WPE] Fix build with API 1.1
Miguel Gomez
Reported
2024-08-14 02:02:26 PDT
There are some minor build errors when trying to build with the API 1.1 - webkit_web_view_toggle_inspector is not defined. - There's an error about an unused var. - The options WPE_PLATFORM_DRM, WPE_PLATFORM_HEADLESS and WPE_PLATFORM_WAYLAND are enabled even whe WPE_PLATFORM is disabled, which causes build errors on cog and minibrowser
Attachments
Add attachment
proposed patch, testcase, etc.
Miguel Gomez
Comment 1
2024-08-14 02:15:24 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/32182
EWS
Comment 2
2024-08-14 08:48:46 PDT
Committed
282232@main
(a6cb7e9309ef): <
https://commits.webkit.org/282232@main
> Reviewed commits have been landed. Closing PR #32182 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug