[WPE] Fix build with API 1.1 https://bugs.webkit.org/show_bug.cgi?id=278088

Reviewed by Carlos Garcia Campos.

Define webkit_web_view_toggle_inspector() only when the 2022 is being used,
fix an unused var error, and ensure that all the WPE_PLATFORMS are
disabled if the WPE_PLATFORM option is disbled.

* Source/WebKit/UIProcess/API/wpe/WebKitWebViewWPE.cpp:
* Source/WebKit/UIProcess/Automation/libwpe/WebAutomationSessionWPE.cpp:
(WebKit::WebAutomationSession::platformSimulateMouseInteraction):
* Source/cmake/OptionsWPE.cmake:

Canonical link: https://commits.webkit.org/282232@main